
2005-08-30
- po/de.po: Fixed some form_alert strings that were too big. (THH)

2005-09-08
  Patches by Roger Crettol:
- bdos/proc.c bdos/rwa.S: Correctly pass register D0 to _gouser in processing
  gemdos xterm (0x4C) call - was broken
- bios/keyb_sg.h bios/country.h country.mk: Support for swiss german keyboard
- cli/command.c: Revised ECHO, suppressing extra newlines in batch mode

2005-09-18
- desk/desk_rsc.c: Removed some more unused strings. (THH)
- doc/authors.txt doc/announce.txt: Updates for version 0.8.1 (THH)

* Release: 0.8.1

2005-09-19
- vdi/vdi_asm.S: reversed mouse wheel direction, now Milan compatible (joy)

2005-10-04
- po/fi.po: Eero Tamminen has updated the Finnish translation. (THH)

2006-02-20
- bdos/kpgmld.c: kpgm_relocate() added (SOP)
- bdos/proc.h: PE_RELOCATE Pexec mode 50 defined (SOP)
- bdos/proc.c: PE_RELOCATE mode added - it gets raw TOS executable data
  (the complete mint.prg) and relocates it as if it was loaded normally. (SOP)
- bdos/{umem.c, iumem.c}: some conditional debugging added (SOP)
- bios/bios.c: bootstrap() added - loads and starts MiNT kernel from emulator
  via BOOTSTRAP NatFeat.
  Also added a safety call to Setdta() after loading an AUTO program. Fixes
  problem with loading programs after BETADOS.PRG (it probably scratched
  the DTA buffer upon starting thus the consequent Fsnext() didn't work) (SOP)
- bios/natfeat.[ch]: nf_bootstrap(), nf_getbootdrive() added (SOP)
- Makefile: dd in cygwin needs binary flags (SOP)
- po/fr.po: Patrice Mandin translated cli/command.c to French and says that
  NLS is broken since untranslated CLI crashes (instead of falling back
  to English as Laurent designed it) (joy)

2006-05-03
- bios/kprint.c: fix bus error register printout for MC68040 (joy)

2006-05-05
- bios/vectors.S: _int_hbl handler had incorrectly commented the internal
  logic. And then Andreas noticed the misplaced jump label that could cause
  system crash if IPL was 1 or 2. (joy)