@@ -1946,3 +1946,7 @@ Start... early ages
 - bios/vectors.S: _int_hbl handler had incorrectly commented the internal
   logic. And then Andreas noticed the misplaced jump label that could cause
   system crash if IPL was 1 or 2. (joy)
+
+2006-05-22
+- bios/natfeat*: nf_getbootstrap_arg() added (SOP)
+- bios/bios.c: bootstrap arguments added (SOP)
